--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cxs": "^6.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-height": "^3.0.0",
     "react-scripts": "1.0.14"
   },
   "scripts": {
