--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "4.0.0-beta",
     "color": "^2.0.0",
     "cxs": "^6.1.0",
+    "lodash": "^4.17.4",
     "react": "^16.0.0",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.0.0",
     "react-height": "^3.0.0",
     "react-scripts": "1.0.14"
